# hosted-agent-with-skills

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.yaml  main.py  pyproject.toml
.foundry/: agent-metadata.yaml
blog/: blog-2026-03-20-20260320190206.md  blog-2026-03-22-20260322172044.md
scripts/: bootstrap.sh  build-image.sh  deploy-azd.sh  deploy-sdk.py  invoke-foundry.py  invoke-local.sh  push-image.sh
skills/: blog_writer_skill.py
